adds content for macro commands

--- a/macro_commands/Transfer Options.ipynb
+++ b/macro_commands/Transfer Options.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Consolidate and Distribute\n",
+    "# Transfer Options\n",
     "\n",
-    "Save time and tips with the **`.distribute()`** and **`.consolidate()`** commands. These are nearly identical to **`.transfer()`**, except that they will combine multiple transfer's into a single tip."
+    "There are other options for customizing your transfer command:"
    ]
   },
   {
@@ -40,9 +40,11 @@
    "source": [
     "<hr></hr>\n",
     "\n",
-    "## Consolidate\n",
+    "## Always Get a New Tip\n",
     "\n",
-    "Volumes going to the same destination well are combined within the same tip, so that multiple aspirates can be combined to a single dispense."
+    "Transfer commands will by default use the same one tip for each well, then finally drop it in the trash once finished.\n",
+    "\n",
+    "The pipette can optionally get a new tip at the beginning of each aspirate, to help avoid cross contamination."
    ]
   },
   {
@@ -55,7 +57,11 @@
    "source": [
     "robot.clear_commands()\n",
     "\n",
-    "pipette.consolidate(30, plate.rows('2'), plate.wells('A1'))\n",
+    "pipette.transfer(\n",
+    "    100,\n",
+    "    plate.wells('A1', 'A2', 'A3'),\n",
+    "    plate.wells('B1', 'B2', 'B3'),\n",
+    "    new_tip='always')    # always get a new tip\n",
     "\n",
     "for c in robot.commands():\n",
     "    print(c)"
@@ -65,9 +71,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Multiple Destination Wells\n",
+    "## Never Get a New Tip\n",
     "\n",
-    "If there are multiple destination wells, the pipette will never combine their volumes into the same tip."
+    "For scenarios where you instead are calling **`.pick_up_tip()`** and **`.drop_tip()`** elsewhere in your protocol, the transfer command can ignore picking up or dropping tips."
    ]
   },
   {
@@ -80,7 +86,11 @@
    "source": [
     "robot.clear_commands()\n",
     "\n",
-    "pipette.consolidate(30, plate.rows('2'), plate.wells('A1', 'A2'))\n",
+    "pipette.transfer(\n",
+    "    100,\n",
+    "    plate.wells('A1', 'A2', 'A3'),\n",
+    "    plate.wells('B1', 'B2', 'B3'),\n",
+    "    new_tip='never')    # never pick up or drop a tip\n",
     "\n",
     "for c in robot.commands():\n",
     "    print(c)"
@@ -90,11 +100,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<hr></hr>\n",
+    "## Trash or Return Tip\n",
     "\n",
-    "## Distribute\n",
-    "\n",
-    "Volumes from the same source well are combined within the same tip, so that one aspirate can provide for multiple dispenses."
+    "By default, the transfer command will drop the pipette's tips in the trash container. However, if you wish to instead return the tip to it's tip rack, you can set `trash=False`."
    ]
   },
   {
@@ -107,7 +115,11 @@
    "source": [
     "robot.clear_commands()\n",
     "\n",
-    "pipette.distribute(30, plate.wells('A1'), plate.rows('2'))\n",
+    "pipette.transfer(\n",
+    "    100,\n",
+    "    plate.wells('A1'),\n",
+    "    plate.wells('B1'),\n",
+    "    trash=False)       # do not trash tip\n",
     "\n",
     "for c in robot.commands():\n",
     "    print(c)"
@@ -117,9 +129,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Multiple Source Wells\n",
+    "## Touch Tip\n",
     "\n",
-    "If there are multiple source wells, the pipette will never combine their volumes into the same tip."
+    "A touch-tip can be performed after every aspirate and dispense by setting `touch_tip=True`."
    ]
   },
   {
@@ -132,7 +144,11 @@
    "source": [
     "robot.clear_commands()\n",
     "\n",
-    "pipette.distribute(30, plate.wells('A1', 'A2'), plate.rows('2'))\n",
+    "pipette.transfer(\n",
+    "    100,\n",
+    "    plate.wells('A1'),\n",
+    "    plate.wells('A2'),=\n",
+    "    touch_tip=True)     # touch tip to each well's edge\n",
     "\n",
     "for c in robot.commands():\n",
     "    print(c)"
@@ -142,9 +158,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Disposal Volume\n",
+    "## Blow Out\n",
     "\n",
-    "When dispensing multiple times from the same tip, it is recommended to aspirate an extra amount of liquid to be disposed of after distributing. This added **`disposal_vol`** can be set as an optional argument."
+    "A blow-out can be performed after every dispense that leaves the tip empty by setting `blow_out=True`."
    ]
   },
   {
@@ -157,11 +173,11 @@
    "source": [
     "robot.clear_commands()\n",
     "\n",
-    "pipette.distribute(\n",
-    "    30,\n",
-    "    plate.wells('A1', 'A2'),\n",
-    "    plate.rows('2'),\n",
-    "    disposal_vol=10)   # include extra liquid to make dispenses more accurate\n",
+    "pipette.transfer(\n",
+    "    100,\n",
+    "    plate.wells('A1'),\n",
+    "    plate.wells('A2'),\n",
+    "    blow_out=True)      # blow out droplets when tip is empty\n",
     "\n",
     "for c in robot.commands():\n",
     "    print(c)"
@@ -171,10 +187,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-warning\" role=\"alert\" style=\"margin: 10px\">\n",
-    "<p><strong>NOTE</strong></p>\n",
-    "<p>If you do not specify a <code>disposal_vol</code>, the pipette will by default use a <code>disposal_vol</code> equal to it's <code>min_volume</code>. This tutorial has not given the pipette any <code>min_volume</code>, so below is an example of allowing the pipette's <code>min_volume</code> to be used as a default for <code>disposal_vol</code>.</p>\n",
-    "</div>"
+    "## Mix Before/After\n",
+    "\n",
+    "A mix can be performed before every aspirate by setting `mix_before=()`. The value of `mix_before=` must be a tuple, the *1st* value is the number of repetitions, the *2nd* value is the amount of liquid to mix."
    ]
   },
   {
@@ -187,12 +202,41 @@
    "source": [
     "robot.clear_commands()\n",
     "\n",
-    "pipette.min_volume = 20  # `min_volume` is used as default to `disposal_vol`\n",
+    "pipette.transfer(\n",
+    "    100,\n",
+    "    plate.wells('A1'),\n",
+    "    plate.wells('A2'),\n",
+    "    mix_before=(2, 50), # mix 2 times with 50uL before aspirating\n",
+    "    mix_after=(3, 75))  # mix 3 times with 75uL after dispensing\n",
     "\n",
-    "pipette.distribute(\n",
-    "    30,\n",
-    "    plate.wells('A1', 'A2'),\n",
-    "    plate.rows('2'))\n",
+    "for c in robot.commands():\n",
+    "    print(c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Air Gap\n",
+    "\n",
+    "An air gap can be performed after every aspirate by setting `air_gap=int`, where the value is the volume of air in microliters to aspirate after aspirating the liquid."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "robot.clear_commands()\n",
+    "\n",
+    "pipette.transfer(\n",
+    "    100,\n",
+    "    plate.wells('A1'),\n",
+    "    plate.wells('A2'),\n",
+    "    air_gap=20)         # add 20uL of air after each aspirate\n",
     "\n",
     "for c in robot.commands():\n",
     "    print(c)"
