--- a/macro_commands/Transfer.ipynb
+++ b/macro_commands/Transfer.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Transfer\n",
     "\n",
-    "The `.transfer()` command is built up from other API commands (like `.aspirate()`, `.dispense()`, and `.drop_tip()`), and allows you to describe the movement of liquids with less words and loops."
+    "Most of time, a protocol is really just looping over some wells, aspirating, and then dispensing. Even though they are simple in nature, these loops take up a lot of space. The **`pipette.transfer()`** command takes care of those common loops. It will combine aspirates and dispenses automatically, making your protocol easier to read and edit."
    ]
   },
   {
@@ -18,20 +18,20 @@
    "outputs": [],
    "source": [
     "'''\n",
-    "THIS NOTEBOOK REQUIRES THE FOLLOWING IMPORTS AND VARIABLES\n",
-    "PLEASE RUN THIS CELL BEFORE CONTINUING WITH THE TUTORIAL\n",
+    "Run this cell to setup the tutorial\n",
     "'''\n",
     "from opentrons import robot, containers, instruments\n",
     "\n",
+    "plate = containers.load('96-flat', 'B1')\n",
+    "\n",
     "tiprack = containers.load('tiprack-200ul', 'A1')\n",
     "trash = containers.load('point', 'D2')\n",
-    "plate = containers.load('96-flat', 'B1')\n",
     "\n",
     "pipette = instruments.Pipette(\n",
     "    axis='b',\n",
     "    max_volume=200,\n",
-    "    tip_racks=[tiprack],\n",
-    "    trash_container=trash)"
+    "    tip_racks=[tiprack],   # attach the tip rack\n",
+    "    trash_container=trash) # attach the trash"
    ]
   },
   {
@@ -40,9 +40,9 @@
    "source": [
     "<hr></hr>\n",
     "\n",
-    "## One to One\n",
+    "## Basic\n",
     "\n",
-    "The most basic usage is to transfer one volume of liquid from a source well to a destination well. The example below does this, and then prints out all the command created."
+    "The example below will transfer **`100`** uL from well **`'A1'`** to well **`'B1'`**, automatically picking up a **new tip** and then dropping it when finished."
    ]
   },
   {
@@ -53,11 +53,11 @@
    },
    "outputs": [],
    "source": [
-    "robot.clear_commands()\n",
+    "robot.clear_commands()      # erase any previous commands\n",
     "\n",
     "pipette.transfer(100, plate.wells('A1'), plate.wells('B1'))\n",
     "\n",
-    "for c in robot.commands():\n",
+    "for c in robot.commands():  # show all current commands\n",
     "    print(c)"
    ]
   },
@@ -65,7 +65,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If the volume is larger than the pipette's `max_volume`, the `.transfer()` command will automatically break it up into smaller transfers for you."
+    "## Large Volumes\n",
+    "\n",
+    "Volumes larger than the pipette's **`max_volume`** will automatically divide into smaller transfers."
    ]
   },
   {
@@ -78,7 +80,7 @@
    "source": [
     "robot.clear_commands()\n",
     "\n",
-    "pipette.transfer(800, plate.wells('A2'), plate.wells('B2'))\n",
+    "pipette.transfer(700, plate.wells('A2'), plate.wells('B2'))\n",
     "\n",
     "for c in robot.commands():\n",
     "    print(c)"
@@ -88,16 +90,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<hr></hr>\n",
+    "## Multiple Wells\n",
     "\n",
-    "## Many to Many\n",
-    "\n",
-    "The `.transfer()` command can also be used to move liquid between groups of wells, by using lists of wells as your `source` and `destination`.\n",
-    "\n",
-    "<div class=\"alert alert-warning\" role=\"alert\" style=\"margin: 10px\">\n",
-    "<p><strong>NOTE</strong></p>\n",
-    "<p>When transferring liquids between lists of wells, the lists musts be of the same length. You can not ask the <code>.transfer()</code> command to transfer from 2 wells to 3 wells (for example), because it has no idea what you are expecting of it.</p>\n",
-    "</div>"
+    "Transfer commands are most useful when moving liquid between multiple wells."
    ]
   },
   {
@@ -110,7 +105,7 @@
    "source": [
     "robot.clear_commands()\n",
     "\n",
-    "pipette.transfer(100, plate.rows('1'), plate.rows('2'))\n",
+    "pipette.transfer(100, plate.cols('A'), plate.cols('B'))\n",
     "\n",
     "for c in robot.commands():\n",
     "    print(c)"
@@ -120,9 +115,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### List of Volumes\n",
+    "## One to Many (or Many to One)\n",
     "\n",
-    "The volumes can also be a list of different volumes, so that each destination well gets a different volume. This list of volumes must also be the same length as the source/destination lists."
+    "You can transfer from a single source to multiple destinations, and the other way around (many sources to one destination)."
    ]
   },
   {
@@ -135,8 +130,7 @@
    "source": [
     "robot.clear_commands()\n",
     "\n",
-    "volumes = [10, 20, 30, 40, 50, 60, 70, 80]\n",
-    "pipette.transfer(volumes, plate.rows('3'), plate.rows('4'))\n",
+    "pipette.transfer(100, plate.wells('A1'), plate.rows('2'))\n",
     "\n",
     "for c in robot.commands():\n",
     "    print(c)"
@@ -146,38 +140,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<hr></hr>\n",
+    "## Few to Many (or Many to Few)\n",
     "\n",
-    "## Handling Tips\n",
-    "\n",
-    "If you read the command printed above, you will notice the `.transfer()` command picks up a tip once at the beginning, and the drops that tip when finished. This is the default behavior, but can be adjusted by setting the `new_tips=` argument.\n",
-    "\n",
-    "#### `new_tips='once'`\n",
-    "\n",
-    "This first example transfers from for `'2'` to row `'3'`, and we've specifed to get a new tip `'once'` (this is the default behavior so there is no need to set this every time)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "robot.clear_commands()\n",
-    "pipette.transfer(50, plate.wells('A1', 'A2'), plate.wells('B1', 'B1'), new_tip='once')  # default behavior\n",
-    "for c in robot.commands():\n",
-    "    print(c)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### `new_tips='never'`\n",
-    "\n",
-    "Transfer commands can also be told to never pick up or drop a tip, by setting `new_tip='never'`. This is useful if you are using the same tip for a previous or future commands."
+    "What happens if, for example, you tell your pipette to transfer from **`4`** source wells to **`2`** destination wells? The transfer command will attempt to divide the wells evenly, or raise an error if the number of wells aren't divisible."
    ]
   },
   {
@@ -190,7 +155,10 @@
    "source": [
     "robot.clear_commands()\n",
     "\n",
-    "pipette.transfer(50, plate.wells('A1', 'A2'), plate.wells('B1', 'B1'), new_tip='never')\n",
+    "pipette.transfer(\n",
+    "    100,\n",
+    "    plate.wells('A1', 'A2', 'A3', 'A4'),\n",
+    "    plate.wells('B1', 'B2'))\n",
     "\n",
     "for c in robot.commands():\n",
     "    print(c)"
@@ -200,22 +168,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### `new_tips='always'`\n",
-    "\n",
-    "The transfer command can be told to pick up a new tip every time it finishes a dispense, by setting `new_tip='always'`."
+    "## List of Volumes"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [],
    "source": [
     "robot.clear_commands()\n",
     "\n",
-    "pipette.transfer(50, plate.wells('A1', 'A2'), plate.wells('B1', 'B1'), new_tip='always')\n",
+    "pipette.transfer(\n",
+    "    [20, 40, 60],\n",
+    "    plate.wells('A1'),\n",
+    "    plate.wells('B1', 'B2', 'B3'))\n",
     "\n",
     "for c in robot.commands():\n",
     "    print(c)"
@@ -225,151 +195,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### `trash`\n",
+    "## Volume Gradient\n",
     "\n",
-    "By default, the transfer command will drop the pipette's tips in the trash container. However, if you wish to instead return the tip to it's tip rack, you can set `trash-False`."
+    "Create a linear gradient between a start and ending volume (uL). The start and ending volumes must be the first and second elements of a tuple."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [],
    "source": [
     "robot.clear_commands()\n",
     "\n",
-    "pipette.transfer(50, plate.wells('A1', 'A2'), plate.wells('B1', 'B1'), trash=False)\n",
-    "\n",
-    "for c in robot.commands():\n",
-    "    print(c)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Other Options\n",
-    "\n",
-    "There are other options for customizing your transfer command:\n",
-    "\n",
-    "#### `touch_tip`\n",
-    "\n",
-    "A touch-tip can be performed after every aspirate and dispense by setting `touch_tip=True`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "robot.clear_commands()\n",
-    "\n",
-    "pipette.transfer(100, plate.wells('A1'), plate.wells('A2'), touch_tip=True)\n",
-    "\n",
-    "for c in robot.commands():\n",
-    "    print(c)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### `blow_out`\n",
-    "\n",
-    "A blow-out can be performed after every dispense that leaves the tip empty by setting `blow_out=True`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "robot.clear_commands()\n",
-    "\n",
-    "pipette.transfer(100, plate.wells('A1'), plate.wells('A2'), blow_out=True)\n",
-    "\n",
-    "for c in robot.commands():\n",
-    "    print(c)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### `mix_before`\n",
-    "\n",
-    "A mix can be performed before every aspirate by setting `mix_before=()`. The value of `mix_before=` must be a tuple, the *1st* value is the number of repetitions, the *2nd* value is the amount of liquid to mix."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "robot.clear_commands()\n",
-    "\n",
-    "pipette.transfer(100, plate.wells('A1'), plate.wells('A2'), mix_before=(2, 50))\n",
-    "\n",
-    "for c in robot.commands():\n",
-    "    print(c)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### `mix_after`\n",
-    "\n",
-    "A mix can be performed after every dispense by setting `mix_after=()`. The value of `mix_after=` must be a tuple, the *1st* value is the number of repetitions, the *2nd* value is the amount of liquid to mix."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "robot.clear_commands()\n",
-    "\n",
-    "pipette.transfer(100, plate.wells('A1'), plate.wells('A2'), mix_after=(2, 50))\n",
-    "\n",
-    "for c in robot.commands():\n",
-    "    print(c)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### `air_gap`\n",
-    "\n",
-    "An air gap can be performed after every aspirate by setting `air_gap=int`, where the value is the volume of air in microliters to aspirate after aspirating the liquid."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "robot.clear_commands()\n",
-    "\n",
-    "pipette.transfer(100, plate.wells('A1'), plate.wells('A2'), air_gap=20)\n",
+    "pipette.transfer(\n",
+    "    (100, 30),\n",
+    "    plate.wells('A1'),\n",
+    "    plate.rows('2'))\n",
     "\n",
     "for c in robot.commands():\n",
     "    print(c)"
@@ -379,7 +224,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -393,7 +238,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
