--- a/setup/Pipettes.ipynb
+++ b/setup/Pipettes.ipynb
@@ -18,8 +18,7 @@
    "outputs": [],
    "source": [
     "'''\n",
-    "THIS NOTEBOOK REQUIRES THE FOLLOWING IMPORTS AND VARIABLES\n",
-    "PLEASE RUN THIS CELL BEFORE CONTINUING WITH THE TUTORIAL\n",
+    "Run this cell to setup the tutorial\n",
     "'''\n",
     "from opentrons import instruments"
    ]
@@ -139,7 +138,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -153,7 +152,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
