adds link to dilution example

--- a/examples/Hello Opentrons.ipynb
+++ b/examples/Hello Opentrons.ipynb
@@ -31,10 +31,10 @@
     "\n",
     "pipette = instruments.Pipette(axis='b', max_volume=200)\n",
     "\n",
-    "pipette.pick_up_tip(tiprack['A1'])\n",
-    "pipette.aspirate(100, plate['A1'])\n",
-    "pipette.dispense(100, plate['A2'])\n",
-    "pipette.drop_tip(tiprack['A1'])"
+    "pipette.pick_up_tip(tiprack.wells('A1'))\n",
+    "pipette.aspirate(100, plate.wells('A1'))\n",
+    "pipette.dispense(100, plate.wells('A2'))\n",
+    "pipette.drop_tip(tiprack.wells('A1'))"
    ]
   },
   {
