adds script for building html renderings from notebooks; adds custom styling

--- a/macro_commands/transfer_options.ipynb
+++ b/macro_commands/transfer_options.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -49,11 +49,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Picking up tip from <In Place>\n",
+      "Aspirating 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A1>\n",
+      "Dispensing 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well B1>\n",
+      "Drop_tip at <In Place>\n",
+      "Picking up tip from <In Place>\n",
+      "Aspirating 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A2>\n",
+      "Dispensing 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well B2>\n",
+      "Drop_tip at <In Place>\n",
+      "Picking up tip from <In Place>\n",
+      "Aspirating 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A3>\n",
+      "Dispensing 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well B3>\n",
+      "Drop_tip at <In Place>\n"
+     ]
+    }
+   ],
    "source": [
     "robot.clear_commands()\n",
     "\n",
@@ -78,11 +97,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Aspirating 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A1>\n",
+      "Dispensing 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well B1>\n",
+      "Aspirating 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A2>\n",
+      "Dispensing 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well B2>\n",
+      "Aspirating 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A3>\n",
+      "Dispensing 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well B3>\n"
+     ]
+    }
+   ],
    "source": [
     "robot.clear_commands()\n",
     "\n",
@@ -107,11 +139,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Picking up tip from <In Place>\n",
+      "Aspirating 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A1>\n",
+      "Dispensing 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well B1>\n",
+      "Returning tip\n",
+      "Drop_tip at <Deck>/<Slot A1>/<Container tiprack-200ul>/<Well E1>\n"
+     ]
+    }
+   ],
    "source": [
     "robot.clear_commands()\n",
     "\n",
@@ -136,18 +180,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Picking up tip from <In Place>\n",
+      "Aspirating 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A1>\n",
+      "Touching tip\n",
+      "Dispensing 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A2>\n",
+      "Touching tip\n",
+      "Drop_tip at <In Place>\n"
+     ]
+    }
+   ],
    "source": [
     "robot.clear_commands()\n",
     "\n",
     "pipette.transfer(\n",
     "    100,\n",
     "    plate.wells('A1'),\n",
-    "    plate.wells('A2'),=\n",
+    "    plate.wells('A2'),\n",
     "    touch_tip=True)     # touch tip to each well's edge\n",
     "\n",
     "for c in robot.commands():\n",
@@ -165,11 +222,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Picking up tip from <In Place>\n",
+      "Aspirating 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A1>\n",
+      "Dispensing 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A2>\n",
+      "Blow_out at <In Place>\n",
+      "Drop_tip at <In Place>\n"
+     ]
+    }
+   ],
    "source": [
     "robot.clear_commands()\n",
     "\n",
@@ -194,11 +263,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Picking up tip from <In Place>\n",
+      "Mixing 2 times with a volume of 50ul\n",
+      "Aspirating 50uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A1>\n",
+      "Dispensing 50uL at <In Place>\n",
+      "Aspirating 50uL at <In Place>\n",
+      "Dispensing 50uL at <In Place>\n",
+      "Aspirating 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A1>\n",
+      "Dispensing 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A2>\n",
+      "Mixing 3 times with a volume of 75ul\n",
+      "Aspirating 75uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A2>\n",
+      "Dispensing 75uL at <In Place>\n",
+      "Aspirating 75uL at <In Place>\n",
+      "Dispensing 75uL at <In Place>\n",
+      "Aspirating 75uL at <In Place>\n",
+      "Dispensing 75uL at <In Place>\n",
+      "Drop_tip at <In Place>\n"
+     ]
+    }
+   ],
    "source": [
     "robot.clear_commands()\n",
     "\n",
@@ -224,11 +316,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Picking up tip from <In Place>\n",
+      "Aspirating 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A1>\n",
+      "Air gap\n",
+      "Moving to <Well A1>\n",
+      "Aspirating 20uL at <In Place>\n",
+      "Dispensing 20uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A2>\n",
+      "Dispensing 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A2>\n",
+      "Drop_tip at <In Place>\n"
+     ]
+    }
+   ],
    "source": [
     "robot.clear_commands()\n",
     "\n",
@@ -241,12 +348,21 @@
     "for c in robot.commands():\n",
     "    print(c)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -260,7 +376,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
