--- a/setup/Robot.ipynb
+++ b/setup/Robot.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -41,11 +41,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'96-flat': <Deck><Slot B1><Container 96-flat>,\n",
+       " 'tiprack-200ul': <Deck><Slot A1><Container tiprack-200ul>}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "robot.containers()"
    ]
@@ -63,11 +75,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('B', <opentrons.instruments.pipette.Pipette at 0x1055c6828>)]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "robot.get_instruments()"
    ]
@@ -85,11 +108,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Picking up tip from <Deck><Slot A1><Container tiprack-200ul><Well A1>\n",
+      "Drop_tip at <Deck><Slot A1><Container tiprack-200ul><Well A1>\n"
+     ]
+    }
+   ],
    "source": [
     "pipette.pick_up_tip(tiprack.wells('A1'))\n",
     "pipette.drop_tip(tiprack.wells('A1'))\n",
@@ -117,11 +149,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There is 1 command\n",
+      "There are now 0 commands\n"
+     ]
+    }
+   ],
    "source": [
     "robot.clear_commands()\n",
     "pipette.pick_up_tip(tiprack['A1'])\n",
@@ -144,11 +185,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Picking up tip from <Deck><Slot A1><Container tiprack-200ul><Well A1>\n",
+      "Just picked up tip A1\n",
+      "Picking up tip from <Deck><Slot A1><Container tiprack-200ul><Well A1>\n",
+      "Just dropped tip A1\n"
+     ]
+    }
+   ],
    "source": [
     "robot.clear_commands()\n",
     "\n",
@@ -175,11 +227,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pick_up_tip called with no reference to a tip\n"
+     ]
+    }
+   ],
    "source": [
     "pipette.pick_up_tip()\n",
     "\n",
@@ -207,11 +267,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n",
+      "[]\n",
+      "[]\n"
+     ]
+    }
+   ],
    "source": [
     "robot.reset()\n",
     "print(robot.containers())\n",
