--- a/commands/accessing_multiple_wells.ipynb
+++ b/commands/accessing_multiple_wells.ipynb
@@ -50,8 +50,7 @@
    },
    "outputs": [],
    "source": [
-    "for well in plate.wells('A1', 'B2', 'C3', 'H12'):\n",
-    "    print(well)"
+    "plate.wells('A1', 'B2', 'C3', 'H12')"
    ]
   },
   {
@@ -112,7 +111,7 @@
    },
    "outputs": [],
    "source": [
-    "for well in plate.wells('H12', to='A12'):\n",
+    "for well in plate.wells('H1', to='A1', step=2):\n",
     "    print(well)"
    ]
   },
@@ -196,7 +195,7 @@
    },
    "outputs": [],
    "source": [
-    "for row in plate.rows('2', length=3):\n",
+    "for row in plate.rows('2', length=3, step=-2):\n",
     "    print(row)"
    ]
   },
@@ -270,7 +269,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -284,7 +283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
