--- a/macro_commands/Transfer.ipynb
+++ b/macro_commands/Transfer.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -47,11 +47,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Picking up tip from <In Place>\n",
+      "Aspirating 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A1>\n",
+      "Dispensing 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well B1>\n",
+      "Drop_tip at <In Place>\n"
+     ]
+    }
+   ],
    "source": [
     "robot.clear_commands()      # erase any previous commands\n",
     "\n",
@@ -72,11 +83,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Picking up tip from <In Place>\n",
+      "Aspirating 200.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A2>\n",
+      "Dispensing 200.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well B2>\n",
+      "Aspirating 200.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A2>\n",
+      "Dispensing 200.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well B2>\n",
+      "Aspirating 150.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A2>\n",
+      "Dispensing 150.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well B2>\n",
+      "Aspirating 150.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A2>\n",
+      "Dispensing 150.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well B2>\n",
+      "Drop_tip at <In Place>\n"
+     ]
+    }
+   ],
    "source": [
     "robot.clear_commands()\n",
     "\n",
@@ -97,11 +125,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Picking up tip from <In Place>\n",
+      "Aspirating 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A1>\n",
+      "Dispensing 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well B1>\n",
+      "Aspirating 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A2>\n",
+      "Dispensing 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well B2>\n",
+      "Aspirating 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A3>\n",
+      "Dispensing 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well B3>\n",
+      "Aspirating 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A4>\n",
+      "Dispensing 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well B4>\n",
+      "Aspirating 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A5>\n",
+      "Dispensing 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well B5>\n",
+      "Aspirating 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A6>\n",
+      "Dispensing 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well B6>\n",
+      "Aspirating 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A7>\n",
+      "Dispensing 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well B7>\n",
+      "Aspirating 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A8>\n",
+      "Dispensing 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well B8>\n",
+      "Aspirating 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A9>\n",
+      "Dispensing 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well B9>\n",
+      "Aspirating 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A10>\n",
+      "Dispensing 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well B10>\n",
+      "Aspirating 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A11>\n",
+      "Dispensing 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well B11>\n",
+      "Aspirating 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A12>\n",
+      "Dispensing 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well B12>\n",
+      "Drop_tip at <In Place>\n"
+     ]
+    }
+   ],
    "source": [
     "robot.clear_commands()\n",
     "\n",
@@ -122,11 +183,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Picking up tip from <In Place>\n",
+      "Aspirating 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A1>\n",
+      "Dispensing 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A2>\n",
+      "Aspirating 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A1>\n",
+      "Dispensing 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well B2>\n",
+      "Aspirating 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A1>\n",
+      "Dispensing 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well C2>\n",
+      "Aspirating 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A1>\n",
+      "Dispensing 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well D2>\n",
+      "Aspirating 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A1>\n",
+      "Dispensing 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well E2>\n",
+      "Aspirating 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A1>\n",
+      "Dispensing 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well F2>\n",
+      "Aspirating 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A1>\n",
+      "Dispensing 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well G2>\n",
+      "Aspirating 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A1>\n",
+      "Dispensing 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well H2>\n",
+      "Drop_tip at <In Place>\n"
+     ]
+    }
+   ],
    "source": [
     "robot.clear_commands()\n",
     "\n",
@@ -147,11 +233,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Picking up tip from <In Place>\n",
+      "Aspirating 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A1>\n",
+      "Dispensing 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well B1>\n",
+      "Aspirating 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A2>\n",
+      "Dispensing 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well B1>\n",
+      "Aspirating 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A3>\n",
+      "Dispensing 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well B2>\n",
+      "Aspirating 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A4>\n",
+      "Dispensing 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well B2>\n",
+      "Drop_tip at <In Place>\n"
+     ]
+    }
+   ],
    "source": [
     "robot.clear_commands()\n",
     "\n",
@@ -173,12 +276,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Picking up tip from <In Place>\n",
+      "Aspirating 20.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A1>\n",
+      "Dispensing 20.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well B1>\n",
+      "Aspirating 40.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A1>\n",
+      "Dispensing 40.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well B2>\n",
+      "Aspirating 60.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A1>\n",
+      "Dispensing 60.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well B3>\n",
+      "Drop_tip at <In Place>\n"
+     ]
+    }
+   ],
    "source": [
     "robot.clear_commands()\n",
     "\n",
@@ -202,12 +320,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Picking up tip from <In Place>\n",
+      "Aspirating 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A1>\n",
+      "Dispensing 100.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A2>\n",
+      "Aspirating 90.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A1>\n",
+      "Dispensing 90.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well B2>\n",
+      "Aspirating 80.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A1>\n",
+      "Dispensing 80.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well C2>\n",
+      "Aspirating 70.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A1>\n",
+      "Dispensing 70.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well D2>\n",
+      "Aspirating 60.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A1>\n",
+      "Dispensing 60.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well E2>\n",
+      "Aspirating 50.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A1>\n",
+      "Dispensing 50.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well F2>\n",
+      "Aspirating 40.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A1>\n",
+      "Dispensing 40.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well G2>\n",
+      "Aspirating 30.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well A1>\n",
+      "Dispensing 30.0uL at <Deck>/<Slot B1>/<Container 96-flat>/<Well H2>\n",
+      "Drop_tip at <In Place>\n"
+     ]
+    }
+   ],
    "source": [
     "robot.clear_commands()\n",
     "\n",
@@ -219,12 +362,21 @@
     "for c in robot.commands():\n",
     "    print(c)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -238,7 +390,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
